--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ margin-bottom: 1rem;
         text-align: center;
     }
     .home__banner{
-        background-image: url("/images/lady.png");height: 70vh;
+        background-image: url("./images/lady.png");height: 70vh;
         background-repeat: no-repeat;
         background-size: cover;
     width: 100%;
